# firmware-studio

./: README.md
firmware/: CMakeLists.txt
firmware/configuration/: CompileOptions.cmake  IncludeDirectories.cmake  LinkOptions.cmake
firmware/declaration/firmware/: compiler.h
firmware/declaration/firmware/architecture/: scheduler.h
firmware/declaration/firmware/kernel/: initialization.h  scheduler.h
firmware/declaration/firmware/kernel/type/: task.h
firmware/declaration/firmware/microcontroller/rp2350/register/: clocks.h  io_bank0.h  sio.h  uart.h  xosc.h
firmware/declaration/firmware/service/: sio.h  uart.h
firmware/implementation/: CMakeLists.txt
firmware/implementation/architecture/: CMakeLists.txt
firmware/implementation/architecture/cortex_m33/: CMakeLists.txt  exception.c  scheduler.c  vector_table.c
firmware/implementation/architecture/cortex_m33/internal/: exception.h
firmware/implementation/architecture/cortex_m33/internal/register/: scb.h  systick.h
firmware/implementation/kernel/: CMakeLists.txt  initialization.c  scheduler.c
firmware/implementation/kernel/declaration/firmware/kernel/: initialization.h
firmware/implementation/microcontroller/: CMakeLists.txt
firmware/implementation/microcontroller/rp2350/: CMakeLists.txt  image_def.c  linker.ld
firmware/implementation/microcontroller/rp2350/declaration/firmware/microcontroller/rp2350/: io_bank0.h  pads_bank0.h  resets.h  sio.h  uart.h
firmware/implementation/service/: CMakeLists.txt  sio.c  uart.c
